fix: overlap between create new comment component and the list of comments of a report

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -71,10 +71,6 @@ img.k-right-logo {
 }
 /* END THEME */
 
-.p-mention {
-  z-index: -1;
-}
-
 #tooltip {
   display: inline-block;
   background: #435b6f;
